@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.99875-0
-Date: 2007-04-..
+Date: 2007-05-11
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: <Matrix-authors@R-project.org>
